# EI_TS_CS

./: .gitignore  case_study_arima_group_n.ipynb  explo_pytorch.ipynb  exploration.ipynb  neural_network_template.ipynb  pyproject.toml  requirements.txt  submission.csv  template_classical.ipynb  template_deep.ipynb  utils.ipynb
model/: model_20230522_214305.pth  model_20230522_214333.pth  model_20230524_103533.pth
