[tool.poetry]
name = "EI_TS_CS"
version = "0.1.0"
description = ""
authors = ["charles boydelatour"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
notebook = "^6.4.10"
numpy = "^1.24.3"
pandas = "^2.0.1"
statsmodels = "^0.14.0"
scikit-learn = "^1.2.2"
nbformat = "^5.8.0"
plotly = "^5.14.1"
requests = "^2.30.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
torch = "^2.0.1"
tqdm = "^4.65.0"
ipywidgets = "^8.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
